styling for close icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <div id="rootElem" style="border: 1px solid #000;">
             Find out what Amazon Australia is doing to support organisations on the frontline of the Australian bushfire crisis, and how you can help.   
         </div>
-        <script src="./index.js" lkey="z123098"></script>
+        <script src="./index_v1.js" lkey="z123098"></script>
     </body>
 </html>
